--- a/lib/codemirror.css
+++ b/lib/codemirror.css
@@ -3,6 +3,11 @@
   font-family: monospace;
 }
 
+.CodeMirror.flicker-fix {
+  /* This prevents a scrollbar from showing up on the body in IE. */
+  overflow-y: hidden;
+}
+
 .CodeMirror-scroll {
   overflow: auto;
   height: 300px;
@@ -10,6 +15,45 @@
      is visible outside of the scrolling box. */
   position: relative;
   outline: none;
+}
+
+.CodeMirror.flicker-fix .CodeMirror-scroll {
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
+.CodeMirror-scrollbar {
+  float: right;
+  overflow-x: hidden;
+  overflow-y: scroll;
+
+  /* This corrects for the 1px gap introduced to the left of the scrollbar
+     by the rule for .CodeMirror-scrollbar-inner. */
+  margin-left: -1px;
+}
+
+.CodeMirror-scrollbar-inner {
+  /* This needs to have a nonzero width in order for the scrollbar to appear 
+     in Firefox and IE9. */
+  width: 1px;
+}
+
+.CodeMirror-scrollbar.cm-sb-overlap {   
+  /* Ensure that the scrollbar appears in Lion, and that it overlaps the content
+     rather than sitting to the right of it. */
+  position: absolute;
+  z-index: 1;
+  float: none;
+  right: 0;
+  min-width: 12px;
+}
+
+.CodeMirror-scrollbar.cm-sb-nonoverlap {
+  min-width: 12px;
+}
+
+.CodeMirror-scrollbar.cm-sb-ie {
+  min-width: 20px;
 }
 
 .CodeMirror-gutter {
@@ -29,6 +73,11 @@
 .CodeMirror-lines {
   padding: .4em;
   white-space: pre;
+  cursor: text;
+}
+.CodeMirror-lines * {
+  /* Necessary for throw-scrolling to decelerate properly on Safari. */
+  pointer-events: none;
 }
 
 .CodeMirror pre {
