Renamed the .flicker-fix class to .cm-flicker-fix for consistency

--- a/lib/codemirror.css
+++ b/lib/codemirror.css
@@ -3,7 +3,7 @@
   font-family: monospace;
 }
 
-.CodeMirror.flicker-fix {
+.CodeMirror.cm-flicker-fix {
   /* This prevents a scrollbar from showing up on the body in IE. */
   overflow-y: hidden;
 }
@@ -17,7 +17,7 @@
   outline: none;
 }
 
-.CodeMirror.flicker-fix .CodeMirror-scroll {
+.CodeMirror.cm-flicker-fix .CodeMirror-scroll {
   overflow-x: auto;
   overflow-y: hidden;
 }
