Guard the pointer-events CSS hack to only take effect when flickerFix is on

--- a/lib/codemirror.css
+++ b/lib/codemirror.css
@@ -72,7 +72,7 @@
   white-space: pre;
   cursor: text;
 }
-.CodeMirror-lines * {
+.CodeMirror.cm-flicker-fix .CodeMirror-lines * {
   /* Necessary for throw-scrolling to decelerate properly on Safari. */
   pointer-events: none;
 }
