--- a/lib/codemirror.css
+++ b/lib/codemirror.css
@@ -1,6 +1,8 @@
 .CodeMirror {
   line-height: 1em;
   font-family: monospace;
+  position: relative;
+  overflow: hidden;
 }
 
 .CodeMirror-scroll {
