--- a/lib/codemirror.css
+++ b/lib/codemirror.css
@@ -23,9 +23,10 @@
 
   /* IE allows mouse events to target items underneath divs with no background. Since we need the
      scroller to handle the events, we give it a background but make it fully transparent. */
-  background: #000;
-  filter: alpha(opacity = 0);
-  background: rgba(0, 0, 0, 0);
+  background: #000000;
+  background: rgba(0, 0, 0, 0); /* IE9 */
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)"; /* IE8 */
+  filter: alpha(opacity=0); /* IE<8 */
 }
 
 .CodeMirror-gutter {
