--- a/lib/codemirror.css
+++ b/lib/codemirror.css
@@ -12,13 +12,13 @@
      is visible outside of the scrolling box. */
   position: relative;
   outline: none;
-  /* TODO: What's the right way to put this in front of the gutter? Why is the gutter at z-index 10 to begin with? */
+  /* TODO: Is this the best way to put this in front of the gutter? */
   z-index: 11;
 }
 
 .CodeMirror-scroll * {
   /* Necessary since the scroller now overlays the actual line div. */
-  /* TODO: doesn't take the gutter into account. Probably need to actually manually set cursor on mousemove. */
+  /* TODO: this means that the gutter gets a text cursor too. */
   cursor: text;
 
   /* IE allows mouse events to target items underneath divs with no background. Since we need the
