--- a/lib/codemirror.css
+++ b/lib/codemirror.css
@@ -44,6 +44,10 @@
 .CodeMirror-scrollbar.cm-sb-nonoverlap {
   min-width: 12px;
 }
+.CodeMirror-scrollbar.cm-sb-ie-lt9 {
+  /* This needs a nonzero width to appear in IE <9. */
+  min-width: 18px;
+}
 
 .CodeMirror-gutter {
   position: absolute; left: 0; top: 0;
