--- a/lib/codemirror.css
+++ b/lib/codemirror.css
@@ -2,9 +2,8 @@
   line-height: 1em;
   font-family: monospace;
 
-  /* This prevents a scrollbar from showing up on the body in IE. */
-  overflow-y: hidden;
-  position: relative;
+  /* This prevents unwanted scrollbars from showing up on the body and wrapper in IE. */
+  overflow: hidden;
 }
 
 .CodeMirror-scroll {
