Set position: relative on .CodeMirror so scrollbar stays within the wrapper

--- a/lib/codemirror.css
+++ b/lib/codemirror.css
@@ -2,6 +2,8 @@
   line-height: 1em;
   font-family: monospace;
 
+  /* Necessary so the scrollbar can be absolutely positioned within the wrapper. */
+  position: relative;
   /* This prevents unwanted scrollbars from showing up on the body and wrapper in IE. */
   overflow: hidden;
 }
